# interactive-fractal

./: Cargo.toml  build.rs
arbitrary_fixed/: Cargo.toml
arbitrary_fixed/src/: basic_ops.rs  conversion.rs  lib.rs  math.rs  shift.rs
src/: app.rs  arbitrary_fixed.rs  arbitraryfixed.glsl  cs.rs  fractal.glsl  fractal_compute_pipeline.rs  main.rs
src/arbitrary_fixed_glsl/: basic_ops.glsl  convert.glsl
