[package]
name = "interactive_fractal"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
vulkano = "0.32.3"
vulkano-util = "0.32.0"
winit = "0.27.5"
rand = "0.8.5"
bytemuck = "1.13.1"
vulkano-shaders = "0.32.0"
wrapping_arithmetic = "0.1.0"
arbitrary_fixed = { path = "arbitrary_fixed" }

[workspace]
members = ["arbitrary_fixed"]

[build-dependencies]
arbitrary_fixed = { path = "arbitrary_fixed" }
